# spindle

./: .gitignore  .golangci.yml  .ruff-analysis.md  AGENTS.md  CLAUDE.md  DISC_FINGERPRINTING_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  README.md  check-ci.sh  check-deps.sh  go.mod  go.sum  pyproject-strict.toml  pyproject.toml  test_progress_integration.py
.claude/commands/: diagnose.md  itemaudit.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/spindle/: add_file_command.go  audit_gather_command.go  cache_command.go  cache_commentary_command.go  cache_crop_command.go  cache_populate_command.go  cache_process_command.go  cache_rip_command.go  cmd_audit.go  cmd_cache.go  cmd_config.go  cmd_daemon.go  cmd_debug.go  cmd_debug_test.go  cmd_disc.go  cmd_discid.go  cmd_encode_worker.go  cmd_logs.go  cmd_queue.go  cmd_queue_test.go  cmd_stage.go  cmd_staging.go  config_commands.go  config_commands_test.go  context.go  daemon_command.go  daemon_commands.go  daemon_commands_test.go  daemon_run.go  daemon_run_command.go  disc_commands.go  discid_command.go  doc.go  format.go  gensubtitle_standalone.go  gensubtitle_standalone_test.go  helpers.go  identify_command.go  json_output.go  main.go  (+24 more)
cmd/spindled/: bootstrap.go  doc.go  main.go  main_test.go
docs/: API.md  API_INTERFACES.md  API_SERVICES.md  ARCHITECTURE.md  CONFIG.md  CONTENT_ID.md  CONTENT_ID_DESIGN.md  DESIGN_DAEMON.md  DESIGN_INDEX.md  DESIGN_INFRASTRUCTURE.md  DESIGN_LLM_PROMPTS.md  DESIGN_OVERVIEW.md  DESIGN_PACKAGES.md  DESIGN_QUEUE.md  DESIGN_RIPSPEC.md  DESIGN_STAGES.md  DESIGN_TESTING.md  DEVELOPMENT.md  DEVIATIONS.md  README.md  api.md  audio-commentary-detection-plan.md  cli.md  commentary-detection.md  configuration.md  content-identification.md  decomposition-plan.md  deepseek-presets.md  development.md  go-rewrite-implementation.md  go-rewrite-spec.md  logging-implementation-plan.md  preset-decider.md  subtitle-generation-plan.md  workflow.md
docs/adr/: 0001-lightweight-docs.md  0002-task-graph-scheduler.md  0003-llm-subtitle-audit.md  0004-subtitle-formatting-standards.md
docs/proposals/: FLYER_REDESIGN.md  LLM_EPISODE_CANDIDATE_PICKER.md  TASK_SCHEDULER.md  TV_TITLE_SELECTION_REDESIGN.md
docs/user/: workflow.md
internal/api/: audit_workflows.go  cache_resources.go  cli_workflows.go  cli_workflows_test.go  convert.go  convert_test.go  crop_diagnostics.go  crop_diagnostics_test.go  diagnostic_workflows.go  discid_actions.go  discid_actions_test.go  doc.go  queue_actions.go  queue_actions_test.go  queue_remove.go  queue_remove_test.go  queue_retry_episode.go  queue_retry_episode_test.go  queue_service.go  queue_service_test.go  queue_views.go  queue_views_test.go  staging_workflows.go  staging_workflows_test.go  types.go  view_helpers.go
internal/apply/: apply.go  audio.go  disposition.go  disposition_test.go  mux.go  mux_test.go  refine.go  refine_test.go  validation.go  validation_test.go
internal/audioanalysis/: apply.go  audioanalysis.go  audioanalysis_test.go  commentary.go  commentary_test.go  diagnostic.go  disposition.go  disposition_test.go  doc.go  prompt.go  refine.go  refine_test.go  stage.go  stage_test.go  validation.go  validation_test.go
internal/auditgather/: analyze.go  analyze_test.go  auditgather.go  doc.go  gather.go  gather_test.go  report.go
internal/commentaryid/: detector.go  detector_test.go  doc.go  similarity.go  similarity_test.go  types.go
internal/config/: config.go  config_test.go  defaults.go  doc.go  ensure.go  load.go  normalize.go  sample.go  sample_config.toml  validate.go
internal/contentid/: candidates.go  contentid.go  contentid_test.go  doc.go  fingerprint.go  helpers.go  hungarian.go  matcher.go  matcher_apply.go  matcher_candidates.go  matcher_helpers_test.go  matcher_references.go  matcher_strategies.go  matching.go  matching_test.go  ordered.go  policy.go  references.go  verify.go  verify_prompt.go  verify_test.go
internal/daemon/: api_server.go  api_server_test.go  auth.go  daemon.go  daemon_test.go  disc_handlers.go  disc_monitor.go  disc_monitor_test.go  doc.go  netlink_monitor.go  netlink_monitor_test.go
internal/daemonctl/: control.go  daemonctl.go
internal/daemonrun/: daemonrun.go  daemonrun_test.go  layering_test.go  multihandler.go  run.go
internal/disc/: doc.go  ejector.go  labels.go  labels_test.go  lsblk.go  parser_bdinfo.go  parser_makemkv.go  parser_makemkv_test.go  scanner.go  scanner_helpers.go  scanner_test.go  tracks.go  tracks_test.go  tray.go  tray_test.go
internal/discidcache/: cache.go  cache_test.go  discidcache.go  discidcache_test.go  doc.go
internal/discmonitor/: lsblk.go  monitor.go  monitor_stub.go  monitor_test.go  mount.go  netlink.go  tray.go
internal/encoder/: encoder.go  encoder_test.go  wire.go  wire_test.go
internal/encoding/: commentary_refine.go  commentary_refiner.go  doc.go  drapto_log.go  drapto_logs_test.go  drapto_runner.go  encoder.go  encoder_planner_test.go  encoder_snapshot_test.go  encoder_test.go  estimated_size_test.go  fs.go  job_runner.go  plan.go  plan_test.go  preset_selector.go  preset_selector_test.go  progress.go  prompt.go  testhooks.go  validation.go  validation_test.go
internal/encodingstate/: crop.go  crop_test.go  doc.go  encodingstate_test.go  (+2 more)
scripts/: install-user-service.sh  speaker_embed.py
tests/: conftest.py  conftest_processor.py  test_cli.py  test_config.py  test_disc_analysis.py  test_disc_monitor.py  test_disc_processing.py  test_drapto_wrapper.py  test_encoding.py  test_enhanced_identification.py  test_error_handling.py  test_identification.py  test_identify.py  test_library.py  test_notify.py  test_organization.py  test_processor.py  test_processor_content.py  test_processor_core.py  test_processor_disc.py  test_processor_queue.py  test_progress_integration.py  test_queue.py  test_rip_spec.py  test_ripper.py  test_ripper_edge_cases.py  test_ripper_integration.py  test_ripper_parsing.py  test_ripper_ripping.py  test_ripper_scanning.py  test_ripper_selection.py  test_simple_multi_disc.py  test_title.py  test_track.py  test_tv_analyzer.py
(+540 files in other folders)
