# Spindle - Automated disc ripping, encoding, and media library management
# REQUIRES: uv package manager (https://docs.astral.sh/uv/)
# Install uv: curl -LsSf https://astral.sh/uv/install.sh | sh
# End users: uv tool install git+https://github.com/five82/spindle.git
# Development: uv pip install -e ".[dev]"
# Usage: spindle [command] (tool install) or uv run spindle [command] (dev)

[project]
name = "spindle"
version = "0.1.0"
description = "Automated disc ripping, encoding, and media library management"
authors = [{name = "Ken", email = "ken@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "tomli>=2.0.1",
    "watchdog>=3.0.0",
    "plexapi>=4.15.0",
    "sqlite-utils>=3.35.0",
    "python-daemon>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
spindle = "spindle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "T201", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"